This should also be an int

--- a/foh-switch-fancier-blueprint-v2.yaml
+++ b/foh-switch-fancier-blueprint-v2.yaml
@@ -139,7 +139,7 @@ action:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{{ (left_payloads | list)[states(left_number.entity_id)] }}'
+                            payload: '{{ (left_payloads | list)[states(left_number.entity_id) | int] }}'
                       for_each: !input left_lights
                   - action: counter.set_value
                     target: !input left_number
@@ -165,7 +165,7 @@ action:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{{ (right_payloads | list)[states(right_number.entity_id)] }}'
+                            payload: '{{ (right_payloads | list)[states(right_number.entity_id) | int] }}'
                       for_each: !input right_lights
                   - action: counter.set_value
                     target: !input right_number
@@ -193,7 +193,7 @@ action:
                             - action: mqtt.publish
                               data:
                                 topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                                payload: '{{ (left_payloads | list)[states(left_number.entity_id)] }}'
+                                payload: '{{ (left_payloads | list)[states(left_number.entity_id) | int] }}'
                           for_each: !input left_lights
                       - action: counter.set_value
                         target: !input left_number
@@ -206,7 +206,7 @@ action:
                             - action: mqtt.publish
                               data:
                                 topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                                payload: '{{ (right_payloads | list)[states(right_number.entity_id)] }}'
+                                payload: '{{ (right_payloads | list)[states(right_number.entity_id) | int] }}'
                           for_each: !input right_lights
                       - action: counter.set_value
                         target: !input right_number
