--- a/foh-switch-fancier-blueprint-v2.yaml
+++ b/foh-switch-fancier-blueprint-v2.yaml
@@ -47,7 +47,7 @@ blueprint:
       name: Left controls (Zigbee2MQTT) payloads
       description: The payload(s) to be sent by the left side of the remote
       default:
-        - '{ "state": "on" }'
+        - '{ "color_temp": 200 }'
       selector:
         text:
           multiple: true
@@ -55,7 +55,7 @@ blueprint:
       name: Right controls (Zigbee2MQTT) payloads
       description: The payload(s) to be sent by the right side of the remote
       default:
-        - '{ "state": "on" }'
+        - '{ "color_temp": 200 }'
       selector:
         text:
           multiple: true
@@ -238,16 +238,48 @@ action:
                         target: !input right_number
       - conditions: '{{ "press_" | string in trigger.payload_json.action }}'
         sequence:
+          - if: '{{ not not left_number and (trigger.payload_json.action == "press_1" or trigger.payload_json.action == "press_1_and_3") }}'
+            then:
+              - repeat:
+                  sequence:
+                    - action: mqtt.publish
+                      data:
+                        topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                        payload: '{ "state": "on" }'
+                  for_each: !input right_lights
+          - if: '{{ not not right_number and (trigger.payload_json.action == "press_3" or trigger.payload_json.action == "press_1_and_3") }}'
+            then:
+              - repeat:
+                  sequence:
+                    - action: mqtt.publish
+                      data:
+                        topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                        payload: '{ "state": "on" }'
+                  for_each: !input right_lights
           - if: '{{ trigger.payload_json.elapsed | int >= cycle_delay }}'
             then:
               - if: '{{ not not left_number and (trigger.payload_json.action == "press_1" or trigger.payload_json.action == "press_1_and_3") }}'
                 then:
                   - action: counter.reset
                     target: !input left_number
+                  - repeat:
+                      sequence:
+                        - action: mqtt.publish
+                          data:
+                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                            payload: '{ "state": "on" }'
+                      for_each: !input right_lights
               - if: '{{ not not right_number and (trigger.payload_json.action == "press_3" or trigger.payload_json.action == "press_1_and_3") }}'
                 then:
                   - action: counter.reset
                     target: !input right_number
+                  - repeat:
+                      sequence:
+                        - action: mqtt.publish
+                          data:
+                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                            payload: '{ "state": "on" }'
+                      for_each: !input right_lights
           - delay:
               milliseconds: !input hold_delay
           - choose:
