Turn on when off, otherwise apply cycle

--- a/foh-switch-fancier-blueprint-v2.yaml
+++ b/foh-switch-fancier-blueprint-v2.yaml
@@ -131,32 +131,56 @@ action:
           {{ "release_" in trigger.payload_json.action and
           trigger.payload_json.elapsed | int < hold_delay }}
         sequence:
-          - if: '{{ (trigger.payload_json.action == "release_1" or trigger.payload_json.action == "release_1_and_3") and not not left_number }}'
+          - if: '{{ trigger.payload_json.action == "release_1" or trigger.payload_json.action == "release_1_and_3" }}'
             then:
               - repeat:
-                sequence:
-                  - action: mqtt.publish
-                    data:
-                      topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                      payload: '{{ (left_payloads | list)[states(left_number.entity_id) | int] }}'
-                for_each: !input left_lights
-              - action: counter.set_value
-                target: !input left_number
-                data:
-                  value: '{{ (states(left_number.entity_id) | int + 1) % (left_payloads | list | count) }}'
-          - if: '{{ (trigger.payload_json.action == "release_3" or trigger.payload_json.action == "release_1_and_3") and not not left_number }}'
+                  sequence:
+                    - choose:
+                        - conditions: '{{ states("lights." + (repeat.item | regex_replace(find=" |\\|\/", replace="_", ignorecase=False))) == "off" }}'
+                          sequence:
+                            - action: mqtt.publish
+                              data:
+                                topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                                payload: '{ "state": "on" }'
+                        - conditions: '{{ not not left_number }}'
+                          sequence:
+                            - repeat:
+                              sequence:
+                                - action: mqtt.publish
+                                  data:
+                                    topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                                    payload: '{{ (left_payloads | list)[states(left_number.entity_id) | int] }}'
+                              for_each: !input left_lights
+                            - action: counter.set_value
+                              target: !input left_number
+                              data:
+                                value: '{{ (states(left_number.entity_id) | int + 1) % (left_payloads | list | count) }}'
+                  for_each: !input left_lights
+          - if: '{{ trigger.payload_json.action == "release_3" or trigger.payload_json.action == "release_1_and_3" }}'
             then:
               - repeat:
-                sequence:
-                  - action: mqtt.publish
-                    data:
-                      topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                      payload: '{{ (right_payloads | list)[states(right_number.entity_id) | int] }}'
-                for_each: !input right_lights
-              - action: counter.set_value
-                target: !input right_number
-                data:
-                  value: '{{ (states(right_number.entity_id) | int + 1) % (right_payloads | list | count) }}'
+                  sequence:
+                    - choose:
+                        - conditions: '{{ states("lights." + (repeat.item | regex_replace(find=" |\\|\/", replace="_", ignorecase=False))) == "off" }}'
+                          sequence:
+                            - action: mqtt.publish
+                              data:
+                                topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                                payload: '{ "state": "on" }'
+                        - conditions: '{{ not not right_number }}'
+                          sequence:
+                            - repeat:
+                              sequence:
+                                - action: mqtt.publish
+                                  data:
+                                    topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                                    payload: '{{ (right_payloads | list)[states(right_number.entity_id) | int] }}'
+                              for_each: !input right_lights
+                            - action: counter.set_value
+                              target: !input right_number
+                              data:
+                                value: '{{ (states(right_number.entity_id) | int + 1) % (right_payloads | list | count) }}'
+                  for_each: !input right_lights
           - if: '{{ trigger.payload_json.action == "release_2" or trigger.payload_json.action == "release_2_and_4" }}'
             then:
               - repeat:
@@ -191,24 +215,10 @@ action:
                 then:
                   - action: counter.reset
                     target: !input left_number
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
-                          data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "on" }'
-                      for_each: !input right_lights
               - if: '{{ not not right_number and (trigger.payload_json.action == "press_3" or trigger.payload_json.action == "press_1_and_3") }}'
                 then:
                   - action: counter.reset
                     target: !input right_number
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
-                          data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "on" }'
-                      for_each: !input right_lights
           - delay:
               milliseconds: !input hold_delay
           - if: '{{ trigger.payload_json.action == "press_1" or trigger.payload_json.action == "press_1_and_3" }}'
