The regex itself is defined in a string, so needs double escaping

--- a/foh-switch-fancier-blueprint-v2.yaml
+++ b/foh-switch-fancier-blueprint-v2.yaml
@@ -217,7 +217,7 @@ action:
             then:
               - repeat:
                   sequence:
-                    - if: '{{ states("light." + (repeat.item | regex_replace(find=" |\\|\/", replace="_", ignorecase=False))) == "off" }}'
+                    - if: '{{ states("light." + (repeat.item | regex_replace(find=" |\\\\|\\/", replace="_", ignorecase=False))) == "off" }}'
                       then:
                         - action: mqtt.publish
                           data:
@@ -234,7 +234,7 @@ action:
             then:
               - repeat:
                   sequence:
-                    - if: '{{ states("light." + (repeat.item | regex_replace(find=" |\\|\/", replace="_", ignorecase=False))) == "off" }}'
+                    - if: '{{ states("light." + (repeat.item | regex_replace(find=" |\\\\|\\/", replace="_", ignorecase=False))) == "off" }}'
                       then:
                         - action: mqtt.publish
                           data:
